# hse-operating-systems

./: README.md
hw1/: task1.circ  task2.circ
hw2/: task-01.s  task-02.s
hw3/: hw3.s
hw4/: CMakeLists.txt  buddy_allocator.cpp  buddy_allocator.hpp  main.cpp
hw5/: CMakeLists.txt  main.cpp  mmap_page_allocator.hpp  mmap_page_allocator.inl  page_allocator.hpp  slab_allocator.cpp  slab_allocator.hpp
hw6/: CMakeLists.txt  main.cpp
hw6/include/: Archiver.hpp  ArchiverException.hpp  Creator.hpp  FileReader.hpp  FileWriter.hpp
hw6/src/: Archiver.cpp  ArchiverException.cpp  Creator.cpp  FileReader.cpp  FileWriter.cpp
